--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "copy-modules": "node scripts/copy-module.js",
+    "build": "node scripts/bundle.js"
   },
   "dependencies": {
     "react": "18.3.1",
@@ -21,6 +23,10 @@
     "@react-native/eslint-config": "0.75.3",
     "@react-native/metro-config": "0.75.3",
     "@react-native/typescript-config": "0.75.3",
+    "@rnx-kit/babel-preset-metro-react-native": "^2.0.0",
+    "@rnx-kit/metro-config": "^2.0.0",
+    "@rnx-kit/metro-serializer": "^2.0.0",
+    "@rnx-kit/metro-serializer-esbuild": "^0.2.0",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
